--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.16.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.468.0",
