--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.17.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
